k8s/catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-catalog-service
  template:
    metadata:
      labels:
        app: bookstore-catalog-service
    spec:
      containers:
      - name: catalog
        image: datfan06/bookstore-catalog-service:latest
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "300m"
          limits:
            memory: "3Gi"
            cpu: "500m"
        ports:
        - containerPort: 6001
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 6001
      targetPort: 6001
      nodePort: 30006
  selector:
    app: bookstore-catalog-service
