k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-order-service
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-order-service
  template:
    metadata:
      labels:
        app: bookstore-order-service
    spec:
      containers:
      - name: order
        image: datfan06/bookstore-order-service:latest
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "3Gi"
            cpu: "300m"
        ports:
        - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-order-service
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 7001
      targetPort: 7001
      nodePort: 30007
  selector:
    app: bookstore-order-service
