k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-payment-service
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-payment-service
  template:
    metadata:
      labels:
        app: bookstore-payment-service
    spec:
      containers:
      - name: payment
        image: datfan06/bookstore-payment-service:latest
        resources:
          requests:
            memory: "768Mi"
            cpu: "100m"
          limits:
            memory: "1536Mi"
            cpu: "300m"
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-payment-service
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30008
  selector:
    app: bookstore-payment-service
