k8s/zuul-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-zuul-api-gateway-server
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-zuul-api-gateway-server
  template:
    metadata:
      labels:
        app: bookstore-zuul-api-gateway-server
    spec:
      containers:
      - name: zuul
        image: datfan06/bookstore-api-gateway-service:latest
        ports:
        - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-zuul-api-gateway-server
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 8765
      targetPort: 8765
      nodePort: 30003
  selector:
    app: bookstore-zuul-api-gateway-server
